--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="_8dp">8dp</dimen>
     <dimen name="_5dp">5dp</dimen>
     <dimen name="_50dp">50dp</dimen>
+    <dimen name="main_margin">25dp</dimen>
 </resources>
