--- a/app/src/main/res/layout/fragment_list_old.xml
+++ b/app/src/main/res/layout/fragment_list_old.xml
@@ -10,6 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="70dp"
         tools:context=".ui.oldMain.paymentslist.ListFragmentOld">
 
         <androidx.constraintlayout.widget.Guideline
