--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="purple">#4400a9</color>
     <color name="purple_opacity_10">#1A4400a9</color>
     <color name="light_gray">#c7c7c7</color>
+    <color name="light_gray_text">#b8b4be</color>
 </resources>
