--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- Old Styles -->
     <style name="ItemTitle">
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">24sp</item>
@@ -41,5 +42,20 @@
         <item name="android:paddingEnd">@dimen/_16dp</item>
         <item name="android:paddingBottom">@dimen/_8dp</item>
         <item name="android:textAppearance">@style/itemData</item>
+    </style>
+
+    <!-- Main App Styles -->
+    <style name="circle_image">
+        <item name="cornerSize">50%</item>
+    </style>
+
+    <style name="label_text">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/light_gray_text</item>
+    </style>
+
+    <style name="large_text">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">24sp</item>
     </style>
 </resources>
