--- a/app/src/main/res/drawable/ic_chart_selected.xml
+++ b/app/src/main/res/drawable/ic_chart_selected.xml
@@ -4,7 +4,7 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="#00000000"
+        android:fillColor="@color/purple"
         android:pathData="M2,12C2,7.286 2,4.929 3.464,3.464C4.929,2 7.286,2 12,2C16.714,2 19.071,2 20.535,3.464C22,4.929 22,7.286 22,12C22,16.714 22,19.071 20.535,20.535C19.071,22 16.714,22 12,22C7.286,22 4.929,22 3.464,20.535C2,19.071 2,16.714 2,12Z"
         android:strokeWidth="1.5"
         android:strokeColor="@color/purple" />
@@ -12,18 +12,18 @@
         android:fillColor="#00000000"
         android:pathData="M7,18V9"
         android:strokeWidth="1.5"
-        android:strokeColor="@color/purple"
+        android:strokeColor="@color/white"
         android:strokeLineCap="round" />
     <path
         android:fillColor="#00000000"
         android:pathData="M12,18V6"
         android:strokeWidth="1.5"
-        android:strokeColor="@color/purple"
+        android:strokeColor="@color/white"
         android:strokeLineCap="round" />
     <path
         android:fillColor="#00000000"
         android:pathData="M17,18V13"
         android:strokeWidth="1.5"
-        android:strokeColor="@color/purple"
+        android:strokeColor="@color/white"
         android:strokeLineCap="round" />
 </vector>
